# abbrbot

./: Dockerfile  Makefile  README.md  pyproject.toml
abbrbot/: main.py
abbrbot/templates/: start.md
tests/: test_main.py
